WIP: add guild onboarding and Adventurer training rewards